[tool.poetry]
name = "lofi"
version = "0.1.0"
description = ""
authors = ["Vukasin Gostovic <vukasin@gostovic.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
